<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="all">
        <item android:id="@+id/redText"
            android:orderInCategory="1"
            android:title="@string/redText"
            app:showAsAction="always"/>
        <item android:id="@+id/limeText"
            android:orderInCategory="2"
            android:title="@string/limeText"/>
        <item android:id="@+id/whiteText"
            android:orderInCategory="3"
            android:title="@string/whiteText"/>
    </group>
    <group android:checkableBehavior="all">
        <item android:id="@+id/smallFont"
            android:orderInCategory="4"
            android:title="@string/smallFont"/>
        <item android:id="@+id/normalFont"
            android:orderInCategory="5"
            android:title="@string/normalFont"/>
        <item android:id="@+id/largeFont"
            android:orderInCategory="6"
            android:title="@string/largeFont"/>
    </group>
</menu>