<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/xmlBasedMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xmlBasedMenu"
        android:onClick="onXMLBasedMenuButtonClick"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/javaBasedMenu"
        />

    <Button
        android:id="@+id/javaBasedMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/javaBasedMenu"
        android:onClick="onJavaBasedMenuButtonClick"
        app:layout_constraintTop_toBottomOf="@id/xmlBasedMenu"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/contextMenuButton"
        />

    <Button
        android:id="@+id/contextMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contextMenuButton"
        android:onClick="onContextMenuButtonClick"
        app:layout_constraintTop_toBottomOf="@id/javaBasedMenu"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/checkableContextMenuButton"
        />

    <Button
        android:id="@+id/checkableContextMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkableContextMenuButton"
        android:onClick="onCheckableContextMenuButtonClick"
        app:layout_constraintTop_toBottomOf="@id/contextMenuButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>